<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RPG Sheet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="game_master">Game Master</string>
    <string name="player">Player</string>
    <string name="rpg_sheet">RPG Sheet</string>
    <string name="title">Title</string>
    <string name="characters">Characters :</string>
    <string name="create_new_character">Create new Character</string>
    <string name="returnButton">Return</string>
    <string name="create_new_story">Create new Story</string>
    <string name="stories">Stories</string>
    <string name="story">Story</string>
    <string name="dice">Dice</string>
    <string name="lore">Lore</string>
    <string name="monster">Monster</string>
    <string name="monsters">Monsters</string>
    <string name="items">Items</string>
    <string name="nameandinfo">NameAndInfo</string>
    <string name="skill">Skill</string>
    <string name="trait">Trait</string>
    <string name="label">Label</string>
    <string name="description">Description</string>
    <string name="add_a_new_information">Add a new information</string>
    <string name="informations">Informations</string>
    <string name="Name">Name</string>
    <string name="title_activity_dice_rolling">DiceRolling</string>
    <string name="delete">delete</string>
    <string name="skills">Skills</string>
    <string name="add_a_new_skill">Add a new Skill</string>
    <string name="moins">moins</string>
    <string name="plus">plus</string>
    <string name="statistics">Statistics</string>
    <string name="add_a_new_statistic">Add a new statistic</string>
    <string name="value">value</string>
    <string name="deuxPoints">:</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="accelerom_tre">Acceleromètre</string>
    <string name="faces">faces</string>

</resources>
