<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#81F781">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@mipmap/title"
        android:id="@+id/Title"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:contentDescription="@string/title" />

    <Button
        android:id="@+id/PlayerButton"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#a45611"
        android:onClick="loadPlayerView"
        android:scaleX="1"
        android:text="@string/player" />

    <Button
        android:id="@+id/GMButton"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:background="#a45611"
        android:onClick="loadGMView"
        android:text="@string/game_master" />


</LinearLayout>
